# ImCommander

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: ImC_Cache.cmake  ImC_CompilerWarnings.cmake  ImC_Dependencies.cmake  ImC_Hardening.cmake  ImC_InterproceduralOptimization.cmake  ImC_Linker.cmake  ImC_PackageProject.cmake  ImC_PreventInSourcebuilds.cmake  ImC_ProjectOptions.cmake  ImC_Sanitizers.cmake  ImC_StandardProjectSettings.cmake  ImC_StaticAnalyzers.cmake  ImC_Tests.cmake  ImC_VCEnvironment.cmake
src/: CMakeLists.txt  main.cpp
src/backend/: error_message.h  file_operations.cpp  file_operations.h  table_data.h  watch_dir.cpp  watch_dir.h
src/gui/: app.cpp  app.h  copy_file.cpp  copy_file.h  delete_file.cpp  delete_file.h  mainframe.cpp  mainframe.h  make_directory.cpp  make_directory.h  move_file.cpp  move_file.h  viewer.cpp  viewer.h
src/resources/cmake/: customtemplate.plist.in
src/resources/icons/: icon.icns
src/types/: errors.h  op_file.cpp  op_file.h
src/utils/: string_utils.cpp  string_utils.h
